--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta name="description" content="Professional Business Point of Sale System with inventory, sales, purchase, and finance management" />
     <meta name="author" content="Business POS" />
     <meta name="theme-color" content="#1a3a6d" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <meta property="og:title" content="Business POS - Point of Sale System" />
     <meta property="og:description" content="Professional Business Point of Sale System with inventory, sales, purchase, and finance management" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@businesspos" />
+    <meta name="twitter:image" content="/favicon.svg" />
     
     <!-- Preload critical resources -->
     <link rel="preload" href="/src/index.css" as="style">
